--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -114,7 +114,8 @@
     "Spider": true,
     "Skeleton": true,
     "Pillager": true,
-    "Witch": true
+    "Witch": true,
+    "EntitySkreecher": true
   },
   "entitiesalwaysinfernal": {
     "Stray": false,
@@ -138,7 +139,8 @@
     "Spider": false,
     "Skeleton": false,
     "Pillager": false,
-    "Witch": false
+    "Witch": false,
+    "EntitySkreecher": false
   },
   "entitybasehealth": {
     "Vindicator": 24.0,
@@ -154,6 +156,7 @@
     "Spider": 16.0,
     "Skeleton": 20.0,
     "Pillager": 24.0,
-    "Witch": 26.0
+    "Witch": 26.0,
+    "Evoker": 80.0
   }
 }
