--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -115,7 +115,18 @@
     "Skeleton": true,
     "Pillager": true,
     "Witch": true,
-    "EntitySkreecher": true
+    "EntitySkreecher": true,
+    "Piglin": true,
+    "WitherSkeleton": true,
+    "PiglinBrute": true,
+    "MagmaCube": true,
+    "Blaze": true,
+    "EntityStraddler": true,
+    "EntitySoulVulture": true,
+    "ZombifiedPiglin": true,
+    "Ghast": true,
+    "EntityBoneSerpent": true,
+    "EntityEnderiophage": true
   },
   "entitiesalwaysinfernal": {
     "Stray": false,
@@ -140,7 +151,18 @@
     "Skeleton": false,
     "Pillager": false,
     "Witch": false,
-    "EntitySkreecher": false
+    "EntitySkreecher": false,
+    "Piglin": false,
+    "WitherSkeleton": false,
+    "PiglinBrute": false,
+    "MagmaCube": false,
+    "Blaze": false,
+    "EntityStraddler": false,
+    "EntitySoulVulture": false,
+    "ZombifiedPiglin": false,
+    "Ghast": false,
+    "EntityBoneSerpent": false,
+    "EntityEnderiophage": false
   },
   "entitybasehealth": {
     "Vindicator": 24.0,
@@ -157,6 +179,16 @@
     "Skeleton": 20.0,
     "Pillager": 24.0,
     "Witch": 26.0,
-    "Evoker": 80.0
+    "Evoker": 80.0,
+    "EntityRockyRoller": 10.0,
+    "Slime": 4.0,
+    "WitherSkeleton": 20.0,
+    "MagmaCube": 1.0,
+    "Blaze": 20.0,
+    "PiglinBrute": 50.0,
+    "ZombifiedPiglin": 20.0,
+    "Piglin": 16.0,
+    "EntityStraddler": 28.0,
+    "Stray": 20.0
   }
 }
