--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -126,7 +126,9 @@
     "ZombifiedPiglin": true,
     "Ghast": true,
     "EntityBoneSerpent": true,
-    "EntityEnderiophage": true
+    "EntityEnderiophage": true,
+    "Hoglin": true,
+    "EntityDropBear": true
   },
   "entitiesalwaysinfernal": {
     "Stray": false,
@@ -162,7 +164,9 @@
     "ZombifiedPiglin": false,
     "Ghast": false,
     "EntityBoneSerpent": false,
-    "EntityEnderiophage": false
+    "EntityEnderiophage": false,
+    "Hoglin": false,
+    "EntityDropBear": false
   },
   "entitybasehealth": {
     "Vindicator": 24.0,
@@ -189,6 +193,9 @@
     "ZombifiedPiglin": 20.0,
     "Piglin": 16.0,
     "EntityStraddler": 28.0,
-    "Stray": 20.0
+    "Stray": 20.0,
+    "Hoglin": 40.0,
+    "EntityBoneSerpent": 25.0,
+    "EntitySoulVulture": 12.0
   }
 }
