--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -128,7 +128,8 @@
     "EntityBoneSerpent": true,
     "EntityEnderiophage": true,
     "Hoglin": true,
-    "EntityDropBear": true
+    "EntityDropBear": true,
+    "Vex": true
   },
   "entitiesalwaysinfernal": {
     "Stray": false,
@@ -166,7 +167,8 @@
     "EntityBoneSerpent": false,
     "EntityEnderiophage": false,
     "Hoglin": false,
-    "EntityDropBear": false
+    "EntityDropBear": false,
+    "Vex": false
   },
   "entitybasehealth": {
     "Vindicator": 24.0,
