--- a/servidor_minecraft/config/infernalmobs.cfg
+++ b/servidor_minecraft/config/infernalmobs.cfg
@@ -198,6 +198,7 @@
     "Stray": 20.0,
     "Hoglin": 40.0,
     "EntityBoneSerpent": 25.0,
-    "EntitySoulVulture": 12.0
+    "EntitySoulVulture": 12.0,
+    "EntityMurmurHead": 30.0
   }
 }
